# AutonomousAgent

./: .claudeignore  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.jsonc  .pre-commit-config.yaml  .secrets.baseline  .sops.yaml  .yamllint.yml  BRIEFING_GEMINI_STREAM_A.PROGRESS.md  BRIEFING_GEMINI_STREAM_A.STATUS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/hooks/: checkpoint.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: auto-review.yml  ci.yml  codeql.yml  dependency-review.yml  lint-cost-tiers.yml  nightly-eval.yml  no-skip-on-remediation.yml  osv-scanner.yml  phase-0a-deploy.yml  pr-validation.yml  quarterly-dr-drill.yml  release.yml  sbom-cosign.yml  scorecard.yml  secret-scan.yml  tf-validate.yml  trivy.yml  weekly-cost-summary.yml
app/: __init__.py
app/a2a_canary/: __init__.py  main.py
app/adapters/: __init__.py
app/core/: __init__.py  embedder.py  judge.py  memory.py  orchestrator.py  reward.py  router.py  sandbox.py  schemas.py
app/tests/: test_cloud_sql_pgvector_store.py  test_inmemory_adapters.py  test_peer_dispatch.py
audit/: 2026-05-21-summary.md  2026-05-21-verification-synthesis.md  audit-plan.md  findings.md  model-mesh-decision.md
audit/2026-05-19-resume-orchestration/: audit-plan.md  findings.md  wave-3-branch-deletion.md  wave-3-branch-ledger-verification.md  wave-3-pr-roster.json  wave-3-task-16-preflip-evidence.md
audit/2026-05-20-architecture-research-gap-analysis/: audit-plan.md  findings.md  j8-a2a-memo.md  source.md  stream-b-open-questions-disposition.md  verification-gap-report.md
audit/2026-05-20-model-armor-j1-runbook/: runbook.md  validate.sh
audit/2026-05-20-state-of-the-repo/: audit-plan.md  findings.md
audit/2026-05-20-state-of-the-repo-v2/: audit-plan.md  findings.md  orchestration-spec-vs-research-doc-reconciliation.md  research-doc-validation.md
audit/2026-05-21-a2a-spike-plan/: DEFAULTS-ACCEPTED.md  HAND-OFF.md  HERMES-SUBMODULE-VERIFIED.md  SIGN-OFF-REQUEST.md  SPEC-VERSION.md  auth-design.md  integration-points.md  open-questions.md  protocol-survey.md  spike-plan.md  telemetry-design.md
audit/2026-05-21-gemini-delegation/: model-armor-apply.md  model-armor-apply.output  model-armor-apply2.output  model-armor-plan.output  model-armor-replan.output  postgres-plan-postfmt.output  postgres-plan.md  postgres-plan.output  postgres-replan.output
audit/2026-05-21-h1-firecracker/: architecture.md  findings.md  gcp-confirm.md  risks-and-open-questions.md  rollout-plan.md  tool-classification.md
audit/2026-05-21-persistence-trap-12c/: USER-APPROVAL.md  findings.md  implementation-checklist.md  test-contract.md
audit/2026-05-21-phase2-postgres/: PACKET-SUMMARY.md  README.md  acceptance-criteria.md  cost-estimate.md  migrations.md  pgvector-spec.md  provisioning-spec.md  schema-baseline.md
audit/2026-05-21-phase3-governor/: README.md  apis.md  architecture.md  failure-modes.md  observability-spec.md  phasing.md  policy-language.md  scaling.md
audit/2026-05-25-antigravity-p2-review/: audit-plan.md  findings.md
audit/2026-05-27-ground-truth/: audit-plan.md  decisions.md  findings.md
audit/2026-05-28-iq200-verification/: findings.md
audit/2026-05-28-meta-audit/: rollback-procedures.md  state-drift.md
audit/handoff-doc-2026-05-19-review/: audit-plan.md  findings.md
audit/phase1-completion-final-sweep-2026-05-18/: audit-plan.md  findings.md
audit/phase1-completion-sweep-2026-05-18/: audit-plan.md  findings.md
audit/phase1-to-phase2-readiness-2026-05-19/: SYNTHESIS.md  cicd-audit.md  coverage-combined.txt  coverage-unit.txt  docs-architecture-audit.md  observability-reliability-audit.md  quality-audit.md  security-audit.md
compliance/: data-classification.yaml
config/: limits-schema.json  limits.yaml  scrubber-patterns.yaml  toolsets.yaml
config/a2a/: peers.yaml  scrubber-patterns.yaml
config/hermes/: AGENTS.md  MEMORY.md  SOUL.md  USER.md  cli-config.yaml  model-tiers.yaml
deploy/: Dockerfile.hermes  docker-compose.canary.yml  docker-compose.dev.yml  docker-compose.gcp.override.yml  docker-compose.test.yml  docker-compose.yml
deploy/chroma/: auth.json
deploy/honcho/: init.sql
deploy/litellm/: config.yaml
deploy/otel/: collector.dev.yaml  collector.prod.yaml
deploy/sandboxes/: Dockerfile.shell-sandbox  seccomp-hermes.json  seccomp-sandbox.json  seccomp-sidecar.json
deploy/scripts/: rebuild-bootstrap-tarball.sh
docs/: ci-cd.md  mcp-inventory.md  release-process.md
docs/antigravity/: 2026-05-25-ag-briefing-a2a-post-audit-wave.md  2026-05-25-ag-briefing-app-quality-m1-m2.md  2026-05-25-ag-briefing-b-c.md  2026-05-25-ag-briefing-dep-pinning.md  2026-05-25-ag-briefing-hand-off-checklist.md  2026-05-25-ag-briefing-p2-audit-fixes.md  2026-05-25-ag-briefing-p3-peer-dispatch.md  2026-05-25-ag-briefing.md
docs/architecture/: README.md  dr-runbook.md  failure-matrix.md  gcp-migration-i-for-ai-to-autonomous-agent-2026.md  memory-layers.md  sandbox-tiers.md
docs/conventions/: branching.md  code-style.md  commit-messages.md  logging.md  (+2 more)
lib/: healthcheck.py  hermes_bridge.py  limits_validator.py  scrubber.py  scrubber_callback.py  toolset_router.py
scripts/: a2a-e2e-demo.sh  bootstrap.sh  budget_watchdog_loop.py  build-hnsw-index.sh  check-sha-pinning.sh  check_skips.py  decrypt-secrets.sh  encrypt_secrets.sh  escalation_loop.py  healthcheck-ping.sh  migrate-secrets-to-secret-manager.sh  migrate_cloud_sql.py  panic.sh  rotate-sa-keys.sh  run_trajectory_shipper.py  smoke-staging.sh  smoke.sh  snapshot.sh  snapshot_loop.py  teardown.sh  test.sh  update_soul_pin.sh  verify-prereqs.sh  weekly_cost_summary.py
secrets/: .gitignore  README.md  chroma-cloud.env.sops  chroma-token.sops  github-pat.sops  healthchecks-url.sops  healthchecks-url.template.txt  hermes-provider.env.sops  honcho-db-password.sops  honcho.env.sops  litellm-db.env.sops  litellm-master-key.sops  telegram.env.sops
(+307 files in other folders)
