[project]
name = "autonomous-agent-deploy"
version = "0.1.0"
description = "Deployment wrapper for Hermes Agent with self-RL pipeline"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.20",
  "httpx>=0.27",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.14",
  "ruff>=0.6.9",
]

[tool.setuptools.packages.find]
include = ["lib*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
# Custom markers. Registered here so `--strict-markers` (and the default
# PytestUnknownMarkWarning) doesn't choke on legitimate test scopes.
# `integration` already in widespread use across tests/integration/*; the
# `docker` marker is new for tests that physically run `docker compose up`
# and must be skipped on hosts without a docker daemon.
markers = [
  "integration: integration-tier tests that cross module boundaries (config, plugin, container)",
  "docker: tests that require a running docker daemon and `docker compose` CLI (auto-skipped on docker-less hosts)",
  "persistence_trap: Persistence Trap (#12.c) contract tests for the J3 trajectory shipper. Required on every PR that touches lib/trajectory/, lib/durability/failure_matrix.py, lib/evaluators/judge_events.py, or terraform/phase-0a-gcp/model-armor/.",
]
