[project]
name = "autonomous-agent-deploy"
version = "0.1.0"
description = "Deployment wrapper for Hermes Agent with self-RL pipeline"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.20",
  "httpx>=0.27",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.14",
  "ruff>=0.6.9",
]
# A2A spike extra — Day 1 scaffolding pulls the runtime deps the Day 2-10
# build-out will use (FastAPI/uvicorn for the JSON-RPC server, httpx + httpx-sse
# for the client + streaming, pyjwt[crypto] + cryptography for JWT mint/verify
# per the auth-design.md GCP-only federation choice, cachetools for TTL caches,
# python-ulid for trace-friendly task IDs, python-multipart for FastAPI's
# multipart form support). Install with: `uv sync --extra a2a` on the spike
# branch; this extra is feature-flag gated and does NOT pull into production.
a2a = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "httpx-sse>=0.4",
  "pyjwt[crypto]>=2.9",
  "cachetools>=5.5",
  "python-ulid>=3.0",
  "cryptography>=43.0",
  "python-multipart>=0.0.20",
]

[tool.setuptools.packages.find]
include = ["lib*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
# Custom markers. Registered here so `--strict-markers` (and the default
# PytestUnknownMarkWarning) doesn't choke on legitimate test scopes.
# `integration` already in widespread use across tests/integration/*; the
# `docker` marker is new for tests that physically run `docker compose up`
# and must be skipped on hosts without a docker daemon.
markers = [
  "integration: integration-tier tests that cross module boundaries (config, plugin, container)",
  "docker: tests that require a running docker daemon and `docker compose` CLI (auto-skipped on docker-less hosts)",
]
