[project]
name = "autonomous-agent-deploy"
version = "0.1.0"
description = "Deployment wrapper for Hermes Agent with self-RL pipeline"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.20",
  "httpx>=0.27",
  "pydantic>=2.6",
  # Google Cloud SDKs — lazy-imported inside lib/trajectory/shipper.py and
  # scripts/run_trajectory_shipper.py. The lazy import keeps unit tests
  # mockable without the SDK installed, but production execution on the VM
  # requires the wheels to be present in the resolved environment. Declared
  # here (not under [project.optional-dependencies]) so `uv run` on the
  # runtime host pulls them automatically and the J1 launch flip cannot
  # silently fail with ModuleNotFoundError at first --ship-once invocation.
  "google-cloud-secret-manager>=2.20",
  "google-cloud-storage>=2.18",
  "google-cloud-modelarmor>=0.1.0,<0.2",
  "numpy>=2.4.6,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.14",
  "ruff>=0.6.9",
  "opentelemetry-sdk>=1.20",
  # P-2: CloudSqlPgvectorStore contract tests via testcontainers.
  "testcontainers[postgres]>=4.8,<5",
  # Redis jti: in-process fakeredis for distributed replay cache tests.
  "fakeredis[asyncio]>=2.20",
]
# Phase 2 production memory store — Cloud SQL + pgvector.
# P-2 work item per docs/research/autonomous-agent-seed-orchestrator/INTEGRATION.md.
# Lazy-imported in app/adapters/gcp/memory.py; the in-memory store
# (app/adapters/inmemory/memory.py) does not pull these.
# Install on production: `uv sync --extra gcp`
gcp = [
  "asyncpg>=0.29,<0.30",
  "pgvector>=0.3,<0.4",
]
# A2A spike extra — Day 1 scaffolding pulls the runtime deps the Day 2-10
# build-out will use (FastAPI/uvicorn for the JSON-RPC server, httpx + httpx-sse
# for the client + streaming, pyjwt[crypto] + cryptography for JWT mint/verify
# per the auth-design.md GCP-only federation choice, cachetools for TTL caches,
# python-ulid for trace-friendly task IDs, python-multipart for FastAPI's
# multipart form support, redis[asyncio] for the distributed jti replay cache).
# Install with: `uv sync --extra a2a` on the spike
# branch; this extra is feature-flag gated and does NOT pull into production.
a2a = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx-sse>=0.4",
  "pyjwt[crypto]>=2.9",
  "cachetools>=5.5",
  "python-ulid>=3.0",
  "cryptography>=43.0",
  "python-multipart>=0.0.20",
  "opentelemetry-api>=1.20",
  "jcs>=0.2",
  # Distributed jti replay cache — Redis-backed per
  # docs/superpowers/specs/2026-05-25-redis-jti-replay-cache-design.md
  "redis[asyncio]>=5.0,<6",
]

[tool.setuptools.packages.find]
include = ["lib*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
# Custom markers. Registered here so `--strict-markers` (and the default
# PytestUnknownMarkWarning) doesn't choke on legitimate test scopes.
# `integration` already in widespread use across tests/integration/*; the
# `docker` marker is new for tests that physically run `docker compose up`
# and must be skipped on hosts without a docker daemon.
markers = [
  "integration: integration-tier tests that cross module boundaries (config, plugin, container)",
  "docker: tests that require a running docker daemon and `docker compose` CLI (auto-skipped on docker-less hosts)",
  "persistence_trap: Persistence Trap (#12.c) contract tests for the J3 trajectory shipper. Required on every PR that touches lib/trajectory/, lib/durability/failure_matrix.py, lib/evaluators/judge_events.py, or terraform/phase-0a-gcp/model-armor/.",
]
